--- a/src/App.css
+++ b/src/App.css
@@ -24,7 +24,7 @@
 }
 
 .imglogo:hover{
-  opacity: 0.7;
+  opacity: .7;
 }
 
 .nav{
@@ -40,4 +40,20 @@
 .nav img{
   height: 20px;
   margin-top: 15px;
+}
+
+.footerContainer{
+  height: 200px;
+  width: 100%;
+  background-color: #000;
+}
+
+.imgFooter:hover{
+  opacity: .7;
+}
+
+.footerEnd{
+  color: #ffff;
+  font-family: 'Reservation';
+  font-size: .7rem;
 }
