--- a/src/App.css
+++ b/src/App.css
@@ -32,28 +32,66 @@
   height: 4rem;
   display: flex;
   font-family: 'Reservation Bold';
-  color: #ffff;
   justify-content: space-evenly;
   list-style-type: none;
 }
 
 .nav img{
-  height: 20px;
+  height: 25px;
   margin-top: 15px;
 }
 
 .footerContainer{
-  height: 200px;
+  font-family: 'Reservation';
+  font-size: .8rem;
+  height: 300px;
   width: 100%;
-  background-color: #000;
+  background-color: rgb(0, 0, 0);
+  color: #ffff;
+  margin-top: 2rem;
 }
 
 .imgFooter:hover{
   opacity: .7;
 }
 
+.footerTitulos{
+  display: flex;
+  justify-content: space-around;
+}
+
+.footerContacto{
+  margin-top: 5rem;
+  display: flex;
+  justify-content: space-evenly; 
+}
+
 .footerEnd{
+  margin: 1rem;
   color: #ffff;
   font-family: 'Reservation';
   font-size: .7rem;
 }
+
+.imgBody{
+  width: 100%;
+  object-fit: fill;
+}
+
+
+
+
+
+
+
+
+
+
+@media all and (max-width: 576px) {
+  
+  .navContainer{
+    width: 100%;
+    display: flex;
+    align-items: center;
+  }
+} 
