--- a/src/App.css
+++ b/src/App.css
@@ -72,13 +72,15 @@
 
 .tituloBody{
   font-family: 'Reservation';
-  font-size: 3rem;
+  font-size: 2rem;
   color: #ffff;
+  padding: 8%;
 }
 
 .cardsBody{
+  height: 400px;
   display: flex;
-  height: 500px;
+  flex-direction: column;
   justify-content: space-evenly;
 }
 
