--- a/src/App.css
+++ b/src/App.css
@@ -26,10 +26,13 @@
 
 /* NAVBAR */
 
-.navContainer{
+nav {
+  height: 10vh;
   position: fixed;
+  top: 0;
   background-color: black;
   width: 100%;
+  height: 100px;
   z-index: 100;
 }
 
@@ -44,11 +47,14 @@
 
 .nav{
   font-family: 'Reservation Bold';
+  background-color: #000;
   display: flex;
   flex-direction: column;
+  justify-content: space-evenly;
+  height: 91vh;
   padding-left: 0px;
-  height: 200px;
-  justify-content: space-between;
+  margin: 0;
+  visibility: hidden;
 }
 
 .nav img{
@@ -65,10 +71,26 @@
 
 /* BODY */
 
-.videoBody{
+.imgIndex{
+  margin-top: 10vh;
+  height: 300px;
   width: 100%;
   object-fit: cover;
 }
+
+.videoBody{
+  height: 500px;
+  object-fit: cover;
+  object-position: center;
+}
+
+.mudAnimado{
+  font-family:'Reservation';
+  font-size: 3rem;
+  color: #ffff;
+  
+}
+
 
 .tituloBody{
   font-family: 'Reservation';
@@ -78,30 +100,41 @@
 }
 
 .cardsBody{
-  height: 400px;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
 }
 
+.card1{
+  width: 90%;
+  margin: auto;
+}
+.card2{
+  width: 90%;
+  margin: auto;
+}
+.card3{
+  width: 90%;
+  margin: auto;
+}
+.card4{
+  width: 90%;
+  margin: auto;
+}
+
 .card1:hover{
   opacity: 0.5;
-  height: 510px;
-  
 }
 .card2:hover{
   opacity: 0.5;
-  height: 510px;
   
 }
 .card3:hover{
   opacity: 0.5;
-  height: 510px;
   
 }
 .card4:hover{
   opacity: 0.5;
-  height: 510px;
   
 }
 
@@ -157,17 +190,15 @@
 
 
 
-
-
-@media all and (min-width: 800px) {
+@media screen and (min-width: 800px) {
   
   /* NAVBAR */
 
 .navContainer{
   position: fixed;
   background-color: black;
-  width: 100%;
   z-index: 100;
+  height: 200px
 }
 
 .imglogo{
@@ -180,10 +211,14 @@
 }
 
 .nav{
-  display: flex;
   font-family: 'Reservation Bold';
+  display: flex;
+  flex-direction: row;
   justify-content: space-evenly;
+  align-items: center;
   list-style-type: none;
+  visibility: visible;
+  height: 10vh;
 }
 
 .nav img{
@@ -200,6 +235,11 @@
 
 /* BODY */
 
+.imgIndex{
+  width: 100%;
+  position: static;
+}
+
 .videoBody{
   width: 100%;
   object-fit: cover;
@@ -207,14 +247,15 @@
 
 .tituloBody{
   font-family: 'Reservation';
-  font-size: 3rem;
+  font-size: 2rem;
   color: #ffff;
+  padding: 8%;
 }
 
 .cardsBody{
-  display: flex;
   height: 500px;
-  justify-content: space-evenly;
+  display: flex;
+  flex-direction: row                                                                                                ;
 }
 
 .card1:hover{
@@ -242,6 +283,7 @@
 .cardsBody img{
   border-radius: 5px;
 }
+
 
 
 /* FIN BODY */
