--- a/src/App.css
+++ b/src/App.css
@@ -24,7 +24,7 @@
 
 /* FIN FONTS */
 
-/* NAVBAR */
+/* NAVBAR MOBILE */
 
 nav {
   height: 10vh;
@@ -39,6 +39,13 @@ nav {
 .imglogo{
   height: 4rem;
   margin-top: 15px;
+}
+
+.menuIcon{
+  width: 4rem;
+  position: absolute;
+  margin-top: 20px;
+  margin-left: 5rem;
 }
 
 .imglogo:active{
@@ -57,6 +64,10 @@ nav {
   visibility: hidden;
 }
 
+.active{
+  visibility: visible;
+}
+
 .nav img{
   height: 25px;
   margin-top: 15px;
@@ -67,18 +78,64 @@ nav {
   text-decoration: none;
 }
 
-/* FIN NAVBAR */
+/* FIN NAVBAR MOBILE */
 
-/* BODY */
+
+/* NAVBAR DESKTOP */
+@media screen and (min-width: 800px) {
+  
+
+  .navContainer{
+    position: fixed;
+    background-color: black;
+    z-index: 100;
+    height: 200px
+  }
+
+  .imglogo{
+    height: 4rem;
+    margin-top: 15px;
+  }
+
+  .imglogo:hover{
+    opacity: .7;
+  }
+
+  .nav{
+    font-family: 'Reservation Bold';
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    list-style-type: none;
+    visibility: visible;
+    height: 10vh;
+  }
+
+  .nav img{
+    height: 25px;
+    margin-top: 15px;
+  }
+
+  .navItem{
+    color: #ffff;
+    text-decoration: none;
+  }
+
+} 
+
+/* FIN NAVBAR DESKTOP */
+
+/* BODY MOBILE */
 
 .imgIndex{
-  margin-top: 10vh;
   height: 300px;
   width: 100%;
   object-fit: cover;
 }
 
 .videoBody{
+  margin-top: 10vh;
   height: 500px;
   object-fit: cover;
   object-position: center;
@@ -88,207 +145,92 @@ nav {
   font-family:'Reservation';
   font-size: 3rem;
   color: #ffff;
-  
 }
 
-
-.tituloBody{
+.letraIndex{
   font-family: 'Reservation';
-  font-size: 2rem;
   color: #ffff;
-  padding: 8%;
 }
+
 
 .cardsBody{
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
-}
-
-.card1{
-  width: 90%;
   margin: auto;
-}
-.card2{
+  margin-top: 20px;
   width: 90%;
-  margin: auto;
+  border-top: 2px solid #ffff;
 }
-.card3{
-  width: 90%;
-  margin: auto;
-}
-.card4{
-  width: 90%;
-  margin: auto;
-}
-
-.card1:hover{
-  opacity: 0.5;
-}
-.card2:hover{
-  opacity: 0.5;
-  
-}
-.card3:hover{
-  opacity: 0.5;
-  
-}
-.card4:hover{
-  opacity: 0.5;
-  
-}
-
 
 .cardsBody img{
-  border-radius: 5px;
-}
-
-
-/* FIN BODY */
-
-/* FOOTER */
-
-.footerContainer{
-  font-family: 'Reservation';
-  font-size: .8rem;
+  margin-top: 20px;
   height: 300px;
-  width: 100%;
-  background-color: rgb(0, 0, 0);
-  color: #ffff;
-  margin-top: 2rem;
-}
-
-.imgFooter:hover{
-  opacity: .7;
-}
-
-.footerTitulos{
-  display: flex;
-  justify-content: space-around;
-}
-
-.footerContacto{
-  margin-top: 5rem;
-  display: flex;
-  justify-content: space-evenly; 
-}
-
-.footerEnd{
-  margin: 1rem;
-  color: #ffff;
-  font-family: 'Reservation';
-  font-size: .7rem;
-}
-
-/* FIN FOOTER */
-
-
-
-
-
-
-
-
-
-@media screen and (min-width: 800px) {
-  
-  /* NAVBAR */
-
-.navContainer{
-  position: fixed;
-  background-color: black;
-  z-index: 100;
-  height: 200px
-}
-
-.imglogo{
-  height: 4rem;
-  margin-top: 15px;
-}
-
-.imglogo:hover{
-  opacity: .7;
-}
-
-.nav{
-  font-family: 'Reservation Bold';
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-  align-items: center;
-  list-style-type: none;
-  visibility: visible;
-  height: 10vh;
-}
-
-.nav img{
-  height: 25px;
-  margin-top: 15px;
-}
-
-.navItem{
-  color: #ffff;
-  text-decoration: none;
-}
-
-/* FIN NAVBAR */
-
-/* BODY */
-
-.imgIndex{
-  width: 100%;
-  position: static;
-}
-
-.videoBody{
-  width: 100%;
   object-fit: cover;
 }
 
-.tituloBody{
-  font-family: 'Reservation';
-  font-size: 2rem;
-  color: #ffff;
-  padding: 8%;
-}
 
-.cardsBody{
-  height: 500px;
-  display: flex;
-  flex-direction: row                                                                                                ;
-}
 
-.card1:hover{
-  opacity: 0.5;
-  height: 510px;
+/* FIN BODY MOBILE */
+
+
+/* BODY DESKTOP */
+
+@media screen and (min-width: 800px) {
+
+  .imgIndex{
+    width: 100%;
+    position: static;
+  }
   
-}
-.card2:hover{
-  opacity: 0.5;
-  height: 510px;
+  .videoBody{
+    width: 100%;
+    object-fit: cover;
+  }
   
-}
-.card3:hover{
-  opacity: 0.5;
-  height: 510px;
+  .tituloBody{
+    font-family: 'Reservation';
+    font-size: 2rem;
+    color: #ffff;
+    padding: 8%;
+  }
   
-}
-.card4:hover{
-  opacity: 0.5;
-  height: 510px;
+  .cardsBody{
+    height: 500px;
+    display: flex;
+    flex-direction: row;
+  }
   
+  .card1:hover{
+    opacity: 0.5;
+    height: 510px;
+    
+  }
+  .card2:hover{
+    opacity: 0.5;
+    height: 510px;
+    
+  }
+  .card3:hover{
+    opacity: 0.5;
+    height: 510px;
+    
+  }
+  .card4:hover{
+    opacity: 0.5;
+    height: 510px;
+    
+  }
+  
+  
+  .cardsBody img{
+    border-radius: 5px;
+  }
+
 }
+/* FIN BODY DESKTOP */
 
 
-.cardsBody img{
-  border-radius: 5px;
-}
-
-
-
-/* FIN BODY */
-
-/* FOOTER */
+/* FOOTER MOBILE */
 
 .footerContainer{
   font-family: 'Reservation';
@@ -322,7 +264,45 @@ nav {
   font-size: .7rem;
 }
 
-/* FIN FOOTER */
 
 
-} 
+/* FIN FOOTER MOBILE*/
+
+@media screen and (min-width:800px){
+  /* FOOTER DESKTOP */
+
+.footerContainer{
+  font-family: 'Reservation';
+  font-size: .8rem;
+  height: 300px;
+  width: 100%;
+  background-color: rgb(0, 0, 0);
+  color: #ffff;
+  margin-top: 2rem;
+}
+
+.imgFooter:hover{
+  opacity: .7;
+}
+
+.footerTitulos{
+  display: flex;
+  justify-content: space-around;
+}
+
+.footerContacto{
+  margin-top: 5rem;
+  display: flex;
+  justify-content: space-evenly; 
+}
+
+.footerEnd{
+  margin: 1rem;
+  color: #ffff;
+  font-family: 'Reservation';
+  font-size: .7rem;
+}
+
+}
+
+/* FIN FOOTER DESKTOP */
