--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -1,15 +1,14 @@
 /* NAVBAR MOBILE */
 
-nav {
-    height: 10vh;
-    position: fixed;
-    top: 0;
+  nav{
     background-color: black;
     width: 100%;
     height: 100px;
+    position: fixed;
+    top: 0;
     z-index: 100;
   }
-  
+
   .imglogo{
     height: 4rem;
     margin-top: 15px;
@@ -32,7 +31,7 @@ nav {
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-    height: 91vh;
+    height: 100vh;
     padding-left: 0px;
     margin: 0;
     visibility: hidden;
@@ -54,6 +53,24 @@ nav {
   
   /* FIN NAVBAR MOBILE */
   
+
+   /* NAVBAR TABLET */
+
+  @media  screen and  (min-width: 700px) {
+
+    .menuIcon{
+      width: 4rem;
+      position: absolute;
+      margin-top: 20px;
+      margin-left: 12rem;
+    }
+    
+    
+  }
+
+
+  /* FIN NAVBAR TABLET */
+
   
   /* NAVBAR DESKTOP */
   @media screen and (min-width: 800px) {
