--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -9,16 +9,21 @@
     z-index: 100;
   }
 
-  .imglogo{
+  .imglogoMobile{
     height: 4rem;
     margin-top: 15px;
   }
   
+  .imglogoDesktop{
+    display: none;
+  }
+
   .menuIcon{
     width: 4rem;
     position: absolute;
     margin-top: 20px;
     margin-left: 5rem;
+    z-index: 10;
   }
   
   .imglogo:active{
@@ -27,7 +32,7 @@
   
   .nav{
     font-family: 'Reservation Bold';
-    background-color: #000;
+    background-color: rgb(0, 0, 0);
     display: flex;
     flex: 1;
     flex-direction: column;
@@ -96,7 +101,6 @@
       margin-left: 12rem;
     }
     
-    
   }
 
 
@@ -109,27 +113,30 @@
 
     .navContainer{
       position: fixed;
-      background-color: black;
+      background-color: rgb(0, 0, 0);
       z-index: 100;
-      height: 200px;
     }
   
-    .imglogo{
-      height: 4rem;
-      margin-top: 15px;
+    #imgNav{
+      display: block;
+      height: 100px;
+      margin: auto;
+    }
+    
+    .imglogoMobile{
+      display: none;
     }
   
-    .imglogo:hover{
+    .imglogoDesktop:hover{
       opacity: .7;
     }
 
     .menuIcon{
       display: none;
     }
-    
-
+  
     .nav{
-      height: 80px;
+      height: 150px;
       font-family: 'Reservation Bold';
       display: flex;
       flex-direction: row;
@@ -137,11 +144,6 @@
       align-items: center;
       list-style-type: none;
       visibility: visible;
-    }
-  
-    .nav img{
-      height: 25px;
-      margin-top: 15px;
     }
   
     .navItem{
