text align contacto

--- a/src/containers/Contacto/contacto.css
+++ b/src/containers/Contacto/contacto.css
@@ -33,5 +33,9 @@
 .formJunto{
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: space-between;
+}
+
+label{
+    text-align: left;
 }
