--- a/src/containers/Contacto/contacto.css
+++ b/src/containers/Contacto/contacto.css
@@ -1,7 +1,7 @@
 
 .contactoContainer{
     width: 700px;
-    margin: auto;
+    margin: 100px auto;
 }
 
 .infoContacto{
@@ -25,7 +25,6 @@
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-    margin: auto;
     text-align: center;
     height: 80vh
 }
@@ -34,6 +33,12 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    text-align: left;
+}
+
+.formAbajo{
+    display: flex;
+    flex-direction: column;
 }
 
 label{
