--- a/src/containers/Contacto/contacto.css
+++ b/src/containers/Contacto/contacto.css
@@ -1,12 +1,24 @@
 
 .contactoContainer{
-    width: 700px;
+    width: 90%;
     margin: 100px auto;
+    align-self: center;
+}
+
+.contactoFormContainer{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    margin-top: 4rem;
+}
+
+.contactoFormContainer img{
+    height: 600px;
 }
 
 .infoContacto{
     font-family: 'Reservation';
-    font-size: 1rem;
+    font-size: 1.4rem;
     color: #ffff;
 }
 
@@ -26,7 +38,15 @@
     flex-direction: column;
     justify-content: space-evenly;
     text-align: center;
-    height: 80vh
+    height: 600px;
+    width: 600px;
+}
+
+.formContainer button{
+    width: 40%;
+    height: 50px;
+    margin-top: 1rem;
+    align-self: center;
 }
 
 .formJunto{
