--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -8,7 +8,7 @@
   justify-content: space-evenly;
   align-items: center;
   margin-top: 600px;
-  border-top: 2px solid red;
+  border-top: 2px solid rgb(255, 255, 255);
 }
 
 .footerInfo{
