--- a/src/containers/Servicios/servicios.css
+++ b/src/containers/Servicios/servicios.css
@@ -34,7 +34,7 @@
     top: 0; 
     height: 200px;
     width: 500px;
-    background-image: url('http://makeupdesign.com.ar/storage/courses/GPCvB1Lg1o39Fn0o4eQFe4gwhVeUDduzhdog1at7.jpg');
+    background-image: url('https://i.postimg.cc/C1pw4dHd/IMG-3807.jpg');
     background-position: center;
 }
 
@@ -43,8 +43,8 @@
     right: 0;
     height: 200px;
     width: 500px;
-    background-image: url('http://makeupdesign.com.ar/storage/courses/q4iNRBuepCsM2rzMSBRIVzveTIPc2rmjw3wiwZCN.jpg');
-    background-position-y: 20%;
+    background-image: url('https://i.postimg.cc/C1pw4dHd/IMG-3807.jpg');
+    background-position: center;
 }
 
 .serviciosContainerItem3{
@@ -53,8 +53,8 @@
     bottom: 0;
     height: 200px;
     width: 500px;
-    background-image: url('http://makeupdesign.com.ar/storage/courses/0tXaZcpuBhyEorgTzmJ0oJhYFq3UBhzEv6dhSjks.jpg');
-    background-position-y: 35%;
+    background-image: url('https://i.postimg.cc/C1pw4dHd/IMG-3807.jpg');
+    background-position: center;
 }
 
 .serviciosContainerItem4{
@@ -63,7 +63,7 @@
     bottom: 0;
     height: 200px;
     width: 500px;
-    background-image: url('http://makeupdesign.com.ar/storage/courses/3HnfsmCTI4ctSWJdOg5Kjdw6kNV0npq1t72Ei1NQ.jpg');
+    background-image: url('https://i.postimg.cc/C1pw4dHd/IMG-3807.jpg');
     background-position: center;
 }
 
