--- a/src/containers/SobreNosotros/sobrenosotros.css
+++ b/src/containers/SobreNosotros/sobrenosotros.css
@@ -1,19 +1,20 @@
 .sobreNosotrosContainer{
+    width: 100%;
     margin-top: 100px;
-    margin: 5%;
 }
 
 .sobreNosotros1{
+    margin-top: 10vh;
     height: 90vh;
+    position: relative;
 }
 
 .imgFondo1 {
     height: 350px;
     position: absolute;
     right: 70%;
-    bottom: 10%;
+    bottom: 5%;
 }
-
 
 .imgFondo2 {
     height: 800px;
@@ -25,23 +26,98 @@
 .tituloSobreNosotros{
     font-family: 'Reservation';
     color: #ffff;
-    margin-top: 40vh;
+    position: absolute;
+    left: 15%;
+    top: 35%;
 }
 
 .tituloSobreNosotros h1{
-    margin: auto;
+    position: absolute;
+    left: 10%;
     font-weight: 300;
     font-size: 1.5rem;
     width: 1300px;
+
 }
 
-.textosMotivacionalesSN{
+.textosMotivacionalesSNContainer{
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    align-items: center;
+    margin: auto;
+    height: 30vh;
+    width: 80%;
 }
 
-.textoMotivacionesItem{
-    font-size: 24px;
+.textosMotivacionalesSNContainer h1{
+    font-family: 'Reservation';
+    font-size: 1rem;
+    color: #ffff;
+}
+
+.historiaSN1{
+    height: 85vh;
+    width: 90%;
+    position: relative;
+}
+
+.historiaSN1 p{
+    font-family: 'Reservation';
+    font-size: 1.2rem;
+    padding: 1rem;
+    color: #ffff;
+    width: 50%;
+}
+
+.historiaSN1Item1{
+    position: absolute;
+    left: 30%;
+    bottom: 85%;
+    font-family: 'Reservation';
+    font-size: 4.4em;
+    color: #ffff;
+    padding: 1.4rem;
+}
+
+.historiaSN1Item2{
+    position: absolute;
+    left: 0%;
+    bottom: 25%;
+}
+
+.historiaSN1Item3{
+    position: absolute; 
+    left: 25%;
+    bottom: 45%;  
+}
+
+.historiaSN1Item4{
+    position: absolute;
+    left: 75%;
+    bottom: 0%;
+}
+
+.imgCeles1{
+    height: 600px;
+    position: absolute;
+}
+
+.imgCeles2{
+    position: absolute;
+    height: 700px;
+    clip-path: inset(150px 0 200px 0);
+}
+
+.mudAnimadoNosotros{
+    
+    font-family: 'Reservation';
+    font-size: 2rem;
+    color: #ffff;
+}
+
+.HistoriaSN2{
+    height: 90vh;
+    display: flex;
+    flex-direction: row;
 }
 
