--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -1,6 +1,6 @@
 /* NAVBAR MOBILE */
 
-  nav{
+  /* nav{
     background-color: black;
     width: 100%;
     height: 100px;
@@ -106,7 +106,7 @@
       margin-left: 12rem;
     }
     
-  }
+  } 
 
 
   /* FIN NAVBAR TABLET */
@@ -120,6 +120,7 @@
       position: fixed;
       background-color: rgb(0, 0, 0);
       z-index: 100;
+      width: 100%;
     }
   
     #imgNav{
@@ -141,22 +142,62 @@
     }
   
     .nav{
-      height: 150px;
+      height: 100px;
       font-family: 'Reservation Bold';
       display: flex;
       flex-direction: row;
-      justify-content: space-evenly;
+      justify-content: space-around;
       align-items: center;
       list-style-type: none;
-      visibility: visible;
-      height: 100px;
+      align-content: center;
     }
   
     .navItem{
       color: #ffff;
       text-decoration: none;
     }
-  
+
+    .navItem:hover{
+      color: rgb(60, 60, 60);
+    }
+
+    .dropDownContainer{
+      position: relative;
+      top: 15px;
+    }
+    
+    .dropDown{
+      height: 50px;
+      color:#ffff;
+      background-color: #552727;
+      border-radius: 10px;
+    }
+
+    .dropDownBtn{
+      cursor: pointer;
+    }
+
+    .dropDownBtn:hover{
+      cursor: pointer;
+      opacity: .7;
+    }
+
+    .dropDownContent{
+      background-color: aqua; 
+      height: 500px;
+      width: 300px;
+      position: absolute;
+      top: 70px;
+      left: -80px;
+      display: flex;
+      flex-direction: column;
+    }
+    
+    .dropDownItem{
+      
+    }
+
+
   } 
   
   /* FIN NAVBAR DESKTOP */
