--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -5,12 +5,14 @@
     background-color: rgb(0, 0, 0);
     z-index: 100;
     width: 100%;
+    display: flex;
+    justify-content: center;
   }
 
   #imgNav{
     display: block;
     height: 60px;
-    margin: auto;
+    margin-bottom: 20px;
   }
   
   .imglogoMobile{
@@ -26,14 +28,18 @@
   }
 
   .nav{
-    height: 100px;
-    font-family: 'Reservation Bold';
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    flex: 1;
+    justify-content: space-between;
     align-items: center;
+    height: 100px;
+    font-family: 'Reservation Bold';
     list-style-type: none;
-    align-content: center;
+  }
+
+  .navItemsContainer{
+    width: 60%;
   }
 
   .navItem{
@@ -59,11 +65,16 @@
   
   .dropDownBtn{
     cursor: pointer;
-  }
-  
+    text-decoration: none;
+  } 
+
   .dropDownBtn:hover{
     cursor: pointer;
     opacity: .7;
+    opacity: 1;
+    visibility: visible;
+    transform: translateY(0px);
+    transition: 1s ease;
   }
   
   .dropDownContent{
@@ -74,7 +85,7 @@
     top: 60px;
     left: -130px;
   }
-
+  
   .dropDownContent.active{
     opacity: 1;
     visibility: visible;
@@ -89,9 +100,7 @@
     transition: 1s ease;
   }
   
-  .dropDownItem{
-    cursor: pointer;
-  }
+ 
 
   .dropDownItem:hover{
     opacity: .7;
