--- a/src/containers/Servicios/servicios.css
+++ b/src/containers/Servicios/servicios.css
@@ -78,12 +78,15 @@
 }
 
 .servicio{
-    margin: auto;
+    margin: 100px auto;
     width: 90%;
     height: 95vh;
     display: flex;
     background-color: rgb(255, 255, 255);
+    position: relative;
+    top: 50px;
 }
+
 
 .servicioInfo{
     margin-top: 4rem;
