--- a/src/containers/SobreNosotros/sobrenosotros.css
+++ b/src/containers/SobreNosotros/sobrenosotros.css
@@ -144,3 +144,20 @@
     position: relative;
     top: 20%;
 }
+
+.cardsStaffContainer{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    height: 90vh;
+    width: 90%;
+    margin: auto;
+}
+
+.cardsStaff{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: wrap;  
+    margin-top: 6rem;
+}
