nav Dropdown arreglado

--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -65,8 +65,16 @@
   
   .dropDownBtn{
     cursor: pointer;
-    text-decoration: none;
   } 
+
+  .dropDownBtn a{
+    color: #ffff;
+    text-decoration: none;
+  }
+
+  .dropDownBtn a:hover{
+    color: #ffff;
+  }
 
   .dropDownContent{
     background-color: #010101;
