--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -107,104 +107,27 @@
 /* FIN NAVBAR DESKTOP */
 
 
+
 /* NAVBAR MOBILE */
 
-  /* nav{
-    background-color: black;
-    width: 100%;
-    height: 100px;
-    position: fixed;
-    top: 0px;
-    z-index: 100;
-    opacity: .7;
-  }
+@media all and (min-width: 768px){
 
-  nav:hover{
-    opacity: 1;
-  }
-
-  .imglogoMobile{
-    height: 4rem;
-    margin-top: 15px;
-  }
-  
-  .imglogoDesktop{
+  .burguer{
     display: none;
   }
 
-  .menuIcon{
-    width: 4rem;
-    position: absolute;
-    margin-top: 20px;
-    margin-left: 5rem;
-    z-index: 10;
-  }
-  
-  .imglogo:active{
-    opacity: .7;
-  }
-  
+}
+
+@media all and (max-width: 768px){
   .nav{
-    font-family: 'Reservation Bold';
-    background-color: rgb(0, 0, 0);
     display: flex;
-    flex: 1;
     flex-direction: column;
-    justify-content: space-evenly;
-    height: 100vh;
-    padding-left: 0px;
-    margin: 0;
-    visibility: hidden;
   }
-
-  .slide-in-top {
-    -webkit-animation: slide-in-top 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-            animation: slide-in-top 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-  }
-
-  @-webkit-keyframes slide-in-top {
-    0% {
-      -webkit-transform: translateY(-1000px);
-              transform: translateY(-1000px);
-      opacity: 0;
-    }
-    100% {
-      -webkit-transform: translateY(0);
-              transform: translateY(0);
-      opacity: 1;
-    }
-  }
-  @keyframes slide-in-top {
-    0% {
-      -webkit-transform: translateY(-1000px);
-              transform: translateY(-1000px);
-      opacity: 0;
-    }
-    100% {
-      -webkit-transform: translateY(0);
-              transform: translateY(0);
-      opacity: 1;
-    }
-  }
+}
   
-  .active{
-    visibility: visible;
-  }
-  
-  .nav img{
-    height: 25px;
-    margin-top: 15px;
-  }
-  
-  .navItem{
-    color: #ffff;
-    text-decoration: none;
-  }
-  
-  /* FIN NAVBAR MOBILE */
+/* FIN NAVBAR MOBILE */
   
 
-   /* NAVBAR TABLET */
 
 
   
