--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -15,18 +15,6 @@
     margin-bottom: 20px;
   }
   
-  .imglogoMobile{
-    display: none;
-  }
-
-  .imglogoDesktop:hover{
-    opacity: .7;
-  }
-
-  .menuIcon{
-    display: none;
-  }
-
   .nav{
     display: flex;
     flex-direction: row;
@@ -115,13 +103,26 @@
   .burguer{
     display: none;
   }
-
 }
 
-@media all and (max-width: 768px){
-  .nav{
+@media all and (max-width: 790px){
+  
+  ul.nav{
+   display: none;
+  }
+
+ .mudLogoNav{
+  margin-top: .8rem;
+ }
+
+
+  .nav.active{
     display: flex;
     flex-direction: column;
+    justify-content: space-around;
+    width: 100%;
+    height: 100vh;
+    z-index: -1px;
   }
 }
   
