--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -57,20 +57,20 @@
   /* FIN FOOTER DESKTOP */
 
   /* FOOTER MOBILE */
-@media screen and (max-width: 576px){
+@media screen and (max-width: 469px){
 
   .footerContainer{
     width: 80%;
     height: 800px;
     display: flex;
     flex-direction: column;
+    margin: auto;
   }
 
   .footerContainer{
     font-family: 'Reservation';
     color: #ffff;
     height: 600px;
-    display: flex;
     margin: auto;
     border-top: 2px solid rgb(44, 29, 172);
   }
@@ -78,19 +78,22 @@
     display: flex;
     flex-direction: column;
     height: 300px;
+    width: 100%;
   }
 
   .footerItem p{
     margin: auto;
   }
 
+  h2{
+    text-align: left;
+  }
+
+
   .footerItem img{
     height: 30px;
     margin-right: 12px;
   }
-  
-
- 
  
 }
 /* FIN FOOTER MOBILE*/
