--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -114,6 +114,11 @@
 
  .mudLogoNav{
   margin-bottom: 10px;
+  margin-left: 20px;
+ }
+
+ .burguer{
+  margin-right: 30px;
  }
 
 
@@ -124,7 +129,9 @@
     width: 100%;
     height: 100vh;
     z-index: -1px;
+    margin-right: 20px;
   }
+
 }
   
 /* FIN NAVBAR MOBILE */
